--- a/src/components/com-style/ShoppingCart.css
+++ b/src/components/com-style/ShoppingCart.css
@@ -38,6 +38,30 @@
     border-radius: 7px;
 }
 
+.checkout {
+    display: flex;
+    flex-direction: column;
+}
+
+.checkoutForm {
+    display: flex;
+    flex-direction: column;
+    font-size: 25px;
+    align-items: center;
+}
+
+.checkoutForm > input {
+    max-width: 70%;
+    font-size: 25px;
+}
+
+.checkoutForm > button {
+    background-color: brown;
+    margin: 15px 10px 20px 10px;
+    font-size: 45px;
+    border-radius: 7px;
+}
+
 
 @media only screen and (max-width: 480px) {
     .shoppingItem{
